# skinnycert

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  cargo-watch-run.sh  compile-release.sh  compose.yaml  docker-skinnycert-image-build.sh  k8s_skinnycert.yaml  sqlx-prepare.sh
.github/workflows/: build_and_test.yml  rust.yml
benchmarks/: README.md
benchmarks/configs/: dev-test.yaml
certificates/: README.md  gen_mtls_certs.sh  gen_tls_cert.sh
certificates/mtls/ca/: ca.crt  ca.key
certificates/mtls/gateway/: gateway.crt  gateway.key  gateway.req
certificates/mtls/sidecar/: sidecar.crt  sidecar.key  sidecar.req
certificates/tls/ca/: tls_ca.crt  tls_ca.csr  tls_ca.key
certificates/tls/gateway/: gateway.crt  gateway.csr  gateway.key
database/: init_db.sql  test_data.sql
gateway/: README.md  apisix.yaml
sidecar/: README.md
sidecar/etc/nginx/: nginx.conf
skinny_vue/: Dockerfile  index.html  package.json  vite.config.ts
skinny_vue/src/: App.vue  global.d.ts  main.ts  style.css
skinny_vue/src/router/: index.ts
skinny_vue/src/services/: api.ts
skinny_vue/src/types/: api.ts
skinny_vue/src/views/: CertificateForm.vue  CertificateList.vue  HealthCheck.vue  KeyAlgorithmDetail.vue  KeyAlgorithmList.vue
slumber/: slumber.yml
src/: server.rs
src/lib/: server.rs
src/lib/server/: configuration.rs  routes.rs  system.rs
src/lib/server/routes/: certificates.rs  handlers.rs  health_check.rs
src/lib/server/routes/handlers/: certificates.rs  health_check.rs  models.rs
src/lib/server/routes/handlers/models/: health_check.rs  tls_certificate.rs
src/server/: api_doc.rs  app.rs  config.rs  configuration.rs  logger.rs  models.rs  routes.rs  startup.rs  system.rs  telemetry.rs
src/server/configuration/: database.rs  network.rs  security.rs
src/server/models/: base.rs  certificate_repository.rs  certificates.rs  db_certificate.rs  ecdsa_key.rs  ecdsa_keys.rs  key_algorithm.rs  key_algorithm_types.rs  key_algorithms.rs  legacy_certificates.rs  repository_errors.rs  responses.rs  shared.rs
src/server/models/certificates/: certificates_model.rs  db.rs  filters.rs  repository.rs
src/server/models/ecdsa_key/: db.rs  openssl.rs  repository.rs
src/server/models/ecdsa_keys/: db.rs  openssl.rs  repository.rs
src/server/models/key_algorithm_statuses/: db.rs  repository.rs
src/server/models/key_algorithm_type_tls_statuses/: db.rs  repository.rs
src/server/models/key_algorithm_types/: db.rs  repository.rs
src/server/models/key_algorithms/: db.rs  filters.rs  openssl.rs  repository.rs  seed.rs
src/server/models/legacy_certificates/: certificates_model.rs  db.rs  repository.rs
src/server/models/rsa_key/: db.rs  repository.rs
src/server/models/rsa_keys/: db.rs  repository.rs
src/server/routes/: certificates.rs  conversions.rs  ecdsa_keys.rs  extractors.rs  health_check.rs  key_statuses.rs  key_type_tls_statuses.rs  key_types.rs  keys.rs  respond_error.rs  responses.rs  rsa_keys.rs
src/server/routes/certificates/: dto.rs  handler.rs
src/server/routes/ecdsa_keys/: dto.rs  handler.rs
src/server/routes/health_check/: dto.rs  handler.rs
src/server/routes/key_statuses/: dto.rs  handler.rs
src/server/routes/key_type_tls_statuses/: dto.rs  handler.rs
src/server/routes/key_types/: dto.rs  handler.rs
src/server/routes/keys/: dto.rs  handler.rs
src/server/routes/rsa_keys/: dto.rs  handler.rs
src/server/shared/: macros.rs
tests/: cert_test_utils.rs  common.rs  common_helpers.rs  create_certificate_request.rs  ecdsa_key_algorithm_test.rs  health_check.rs  model_certificate.rs  paging_rest_cert_backwards.rs  paging_rest_cert_forward.rs  paging_rest_cert_roundtrip.rs  rest_certificates.rs  rest_health_check.rs  rest_key_algorithm_tests.rs  rest_rsa_key_algorithm_check.rs  route_responses.rs  rsa_keys_test.rs  swagger_test.rs
