# Optional: Enable unstable cargo features
# cargo-features = ["profile-rustflags"]

[package]
name = "skinnycert"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Industrial-strength TLS certificate API built in Rust"
license = "MIT"
repository = "https://github.com/yourusername/skinnycert"
keywords = ["tls", "certificates", "actix-web", "rust", "industrial"]
categories = ["network-programming", "web-programming", "cryptography"]

[[bin]]
name = "skinnycert"
path = "src/bin/skinnycert.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-actix-web = "0.7.19"
clap = { version = "4.5.48", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
openssl = "0.10.74"
x509-parser = "0.18.0"
pem = "3.0.6"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sqlx-cli = "0.8.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
futures = "0.3.31"
base64 = "0.22.1"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "actix-web",
] }
utoipa-actix-web = { version = "0.1.2" }
regex = "1.12.2"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
# Optional: Uncomment if you need time/date handling
# chrono = { version = "0.4.22", features = ["serde"] }

# Optional: Uncomment if you need UUID generation
# uuid = { version = "1.8.1", features = ["v4"] }

# Optional: Uncomment if you want to use actix-rt directly
# actix-rt = "2.11.0"

# Optional: Uncomment if you want tracing integration with log crate
# tracing-log = "0.2.0"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json"] }

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1

# Optional: Target-specific flags for advanced builds
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# Optional: Release-specific flags
# [profile.release]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
